[package]
name = "mdrup"
version = "0.1.0"
authors = ["Roman Tataurov <roman.tataurov@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
serialport = { version = "3.3.0" }
ihex = { version = "1.1.2" }
