[package]
name = "milcup"
version = "0.0.6"
authors = ["Roman Tataurov <roman.tataurov@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
serialport = { version = "3.3.0" }
ihex = { version = "1.1.2" }
anyhow = { version = "1.0.0" }
log = { version = "0.4.8" }
env_logger = { version = "0.7.1" }
indicatif = { version = "0.16.2" }
console = { version = ">=0.9.1, <1.0.0", default-features = false }
